Refactor UserService: reemplazar excepciones genéricas por UserException para mejorar el manejo de errores; agregar clase UserException.